--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link
         href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:400,700|Righteous|Allan:400,700|Roboto:400,700&display=swap"
         rel="stylesheet">
-        <link rel="stylesheet" href="all.min.css">
+        <link href="https://use.fontawesome.com/releases/v5.12.1/css/all.css" rel="stylesheet" crossorigin="anonymous">
 </head>
 <body>
     <header class="header">
