add-card-player

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     </div>
                 </div>
                 <div class="main__cards">
-                    <img class="card" src="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/i/541e72b1-84eb-4c5a-88d2-ccdde1a9b9f8/dbnka5p-040dbad9-24fb-40d7-b023-fa9ab0361628.png" alt="">
+                    <img class="card" src="img/fifa-card-player.png"  width="300" style="opacity: .8;">
                 </div>
             </div>
         </div>
