--- a/index.html
+++ b/index.html
@@ -22,8 +22,15 @@
                         <a href="news-chanell.html" class="nav__link">Новости</a>
                     </nav>
                 </div>
-                <div class="header-menu">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Hamburger_icon.svg/1200px-Hamburger_icon.svg.png" alt="" class="burger-menu">
+                <div class="burger__block">
+                    <nav class="burger__nav">
+                        <a href="news-chanell.html" class="nav__link">Новости</a>
+                        <a href="#" class="nav__link">Регестрация</a>
+                        <a href="#" class="nav__link">Войти</a>
+                    </nav>
+                    <div class="header-menu">
+                        <span></span>
+                    </div>
                 </div>
                 <div class="header__nav">
                     <div class="header__right">
@@ -258,5 +265,6 @@
             </div>
         </div>
     </footer>
+    <script src="main.js"></script>
 </body>
 </html>
