--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
     <!-- music list -->
     <div class="music">
         <div class="music__container">
-            <div class="music__title">Music Vibes <i class="fas fa-music"></i></div>
+            <div class="music__title">Music Vibes <i class="fas fa-music"></i> (use proxy server for listen)</div>
             <div class="music__inner">
                 <iframe src="https://open.spotify.com/embed/track/237dlPXLNIsatIRYKRbCWN" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media" class="playlist"></iframe>
                 <iframe src="https://open.spotify.com/embed/track/4d83gRvk3DHU5cWBbyOlSk" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media" class="playlist"></iframe>
