ending burger menu

--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
                 </div>
                 <div class="burger__block">
                     <nav class="burger__nav">
-                        <a href="news-chanell.html" class="nav__link">Новости</a>
-                        <a href="#" class="nav__link">Регестрация</a>
-                        <a href="#" class="nav__link">Войти</a>
+                        <a href="news-chanell.html" class="burger__link">Новости</a>
                     </nav>
                     <div class="header-menu">
                         <span></span>
