--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="header__nav">
                     <div class="header__right">
-                        <a href="" class="header__nav-link">Регестрация</a>
+                        <a href="" class="header__nav-link">Регистрация</a>
                         <a href="" class="header__nav-link">Вход</a>
                     </div>
                 </div>
